adapted correct path and included responsive header

--- a/blog-website.html
+++ b/blog-website.html
@@ -58,25 +58,25 @@
             <section>
                <div class="blogpost-boxes">
                   <div class="blog-box">
-                     <a href="blog-post.html">
+                     <a href="src/blog-post.html">
                         <h2>What about Yoga Retreats in other countries?</h2>
                         Continue reading
                      </a>
                   </div>
                   <div class="blog-box">
-                     <a href="blog-post.html">
+                     <a href="src/blog-post.html">
                         <h2>What about Yoga Retreats in other countries?</h2>
                         Continue reading
                      </a>
                   </div>
                   <div class="blog-box">
-                     <a href="blog-post.html">
+                     <a href="src/blog-post.html">
                         <h2>What about Yoga Retreats in other countries?</h2>
                         Continue reading
                      </a>
                   </div>
                   <div class="blog-box">
-                     <a href="blog-post.html">
+                     <a href="src/blog-post.html">
                         <h2>What about Yoga Retreats in other countries?</h2>
                         Continue reading
                      </a>
